--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.1",
     "react-router": "^7.3.0",
     "react-window": "^1.8.11",
     "sass": "^1.86.0"
