--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "bem-cn": "^3.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "final-form": "^4.20.10",
+    "react": "18.3.1",
+    "react-dom": "^18.3.1",
+    "react-final-form": "^6.5.9",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router": "^7.3.0",
